docs: add enum types to all query params for Swagger clarity
